# competitive-workspace

./: Cargo.toml  a.cpp  a.out  out
a23_moves/: Cargo.toml
a23_moves/src/: main.rs  tester.rs
a_burenka_plays_with_fractions/: Cargo.toml
a_burenka_plays_with_fractions/src/: main.rs  tester.rs
a_fingerprints/: Cargo.toml
a_fingerprints/src/: main.rs  tester.rs
a_greatest_convex/src/: main.rs
a_make_it_beautiful/src/: main.rs  tester.rs
a_parallel_projection/: Cargo.toml
a_parallel_projection/src/: main.rs
a_prefix_and_suffix_array/: Cargo.toml
a_prefix_and_suffix_array/src/: tester.rs
a_robot_program/: Cargo.toml
a_robot_program/src/: main.rs  tester.rs
a_walking_master/: Cargo.toml
a_walking_master/src/: main.rs  tester.rs
abbreviation/: Cargo.toml
abbreviation/src/: tester.rs
algo_lib/src/: collections.rs  lib.rs  math.rs
archive/2023/awef/: Cargo.toml
archive/2023/awef/src/: main.rs  tester.rs
archive/2023/b_quick_sort/: Cargo.toml
archive/2023/b_quick_sort/src/: tester.rs
archive/2023/c_equal_frequencies/: Cargo.toml
archive/2023/circuits/: Cargo.toml
archive/2023/circuits/src/: main.rs  tester.rs
archive/2023/d_many_perfect_squares/: Cargo.toml
archive/2023/d_many_perfect_squares/src/: main.rs  tester.rs
archive/2023/d_many_perfect_squares/tests/: 1.in  1.out
archive/2023/d_moscow_gorillas/: Cargo.toml
archive/2023/d_moscow_gorillas/src/: main.rs
archive/2023/segment-tree-test/: Cargo.toml
archive/2023/segment-tree-test/src/: main.rs  tester.rs
archive/2023/segment-tree-test/tests/: 1.out
b_deadly_laser/: Cargo.toml
b_deadly_laser/src/: tester.rs
b_going_to_the_cinema/: Cargo.toml
b_going_to_the_cinema/src/: tester.rs
b_interesting_sum/: Cargo.toml
b_interesting_sum/src/: main.rs  tester.rs
b_knights_of_apolygonal_table/: Cargo.toml
b_knights_of_apolygonal_table/src/: main.rs  tester.rs
b_knights_of_apolygonal_table/tests/: 1.in  1.out
b_mex_master/: Cargo.toml
b_mex_master/src/: main.rs  tester.rs
b_not_dividing/: Cargo.toml
b_not_dividing/src/: tester.rs
b_permutation_chain/: Cargo.toml
b_permutation_chain/src/: tester.rs
b_quick_sort/: Cargo.toml
b_quick_sort/src/: main.rs  tester.rs
b_toy_blocks/: Cargo.toml
b_toy_blocks/src/: main.rs  tester.rs
binary_combinations/: Cargo.toml
binary_combinations/src/: tester.rs
c_corners/: Cargo.toml
c_corners/src/: main.rs  tester.rs
c_equal_frequencies/: Cargo.toml
c_equal_frequencies/src/: main.rs  tester.rs
c_equal_frequencies/tests/: 1.in
c_min_max_array_transformation/: Cargo.toml
c_min_max_array_transformation/src/: main.rs  tester.rs
c_min_max_array_transformation/tests/: 1.in  1.out
c_robot_in_ahallway/: Cargo.toml
c_robot_in_ahallway/src/: tester.rs
c_scoring_subsequences/: Cargo.toml
c_scoring_subsequences/src/: main.rs  tester.rs
c_sequence_master/: Cargo.toml
c_sequence_master/src/: main.rs  tester.rs
c_two_brackets/: Cargo.toml
c_two_brackets/src/: main.rs  tester.rs
count_inversions/: Cargo.toml
count_inversions/src/: main.rs  tester.rs
counter_game/: Cargo.toml
counter_game/src/: tester.rs
d1_hot_start_up_easy_version/: Cargo.toml
d1_xor_subsequence_easy_version/: Cargo.toml
d_counting_factorizations/: Cargo.toml
d_many_perfect_squares/: Cargo.toml
d_maximum_and/: Cargo.toml
d_maximum_subarray/: Cargo.toml
d_radio_towers/: Cargo.toml
e_modulo/: Cargo.toml
e_tree_master/: Cargo.toml
f_bouncy_ball/: Cargo.toml
g2_subsequence_addition_hard_version/: Cargo.toml
generate_parentheses/: Cargo.toml
graph-test/: Cargo.toml
heap_test/: Cargo.toml
inappropriate_gift/: Cargo.toml
inovative_visualization/: Cargo.toml
journey_to_the_moon/: Cargo.toml
kthsmallest/: Cargo.toml
lonely_integer/: Cargo.toml
maximizing_xor/: Cargo.toml
merge_soort/: Cargo.toml
minimax_sum/: Cargo.toml
problem_asolving_for_carrots/: Cargo.toml
problem_bpot/: Cargo.toml
problem_cnsum/: Cargo.toml
problem_dr2/: Cargo.toml
problem_enasty_hacks/: Cargo.toml
quick_sort/: Cargo.toml
sherlock_and_cost/: Cargo.toml
stavba-dalnic/: Cargo.toml
synchronous_shopping/: Cargo.toml
tea_distribution/: Cargo.toml
test2/: Cargo.toml
test_task/: Cargo.toml
test_task2/: Cargo.toml
the_coin_change_problem/: Cargo.toml
(+309 files in other folders)
