[workspace]
members = [
    "graph-test",
    "stavba-dalnic",
    "b_toy_blocks",
    "a_robot_program",
    "d_radio_towers",
    "c_two_brackets",
    "b_knights_of_apolygonal_table",
    "a_fingerprints",
    "f_bouncy_ball",
    "g2_subsequence_addition_hard_version",
    "d1_xor_subsequence_easy_version",
    "c_corners",
    "b_interesting_sum",
    "a_burenka_plays_with_fractions",
    "e_tree_master",
    "c_sequence_master",
    "b_mex_master",
    "a_walking_master",
    "algo_lib",
    "main"
]
