[package]
<<<<<<<< HEAD:c_tea_tasting/Cargo.toml
name = "c_tea_tasting"
========
name = "d_many_perfect_squares"
>>>>>>>> 53fdd8eaa5da12868d0d145b94f93ce27a9e688a:d_many_perfect_squares/Cargo.toml
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = {path = "../algo_lib"}

[build-dependencies]
rust_competitive_helper_util = {git = "https://github.com/rust-competitive-helper/rust-competitive-helper"}
