[package]
<<<<<<<< HEAD:d_moscow_gorillas/Cargo.toml
name = "d_moscow_gorillas"
========
name = "b_going_to_the_cinema"
>>>>>>>> 53fdd8eaa5da12868d0d145b94f93ce27a9e688a:b_going_to_the_cinema/Cargo.toml
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = {path = "../algo_lib"}

[build-dependencies]
rust_competitive_helper_util = {git = "https://github.com/rust-competitive-helper/rust-competitive-helper"}
